apps/arr/radarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
